--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
       .container {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 10px;
+         justify-content: center;
+        flex-wrap: wrap; 
+        width: 40%;
       }
-      .container #board {
-        display: flex;
-        justify-content: center;
-      }
-      .board {
+      
+      #board {
         background-color: beige;
         border: 10px royalblue solid;
         border-radius: 10px;
-        width: 30%;
+        /*width: 30%;*/
       }
       .card {
         width: 120px;
@@ -19,5 +19,9 @@
         background-color: cornflowerblue;
         border-radius: 10px;
         border: 2px grey solid;
-        margin: 5px;
+        /*margin: 5px;*/
+      }
+      .card:hover{
+        cursor: pointer;
+        box-shadow: 0 0 11px blue; ;
       }
