--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@
       
       #board {
         background-color: beige;
-        border: 10px royalblue solid;
+        border: 5px royalblue solid;
         border-radius: 10px;
         /*width: 30%;*/
       }
       .card {
         width: 120px;
         height: 150px;
-        background-color: cornflowerblue;
+        background-image: url("cardBack.jpg");
+        background-size: 110px 140px;
         border-radius: 10px;
         border: 2px grey solid;
+        padding: 60px 40px 40px 45px;
         /*margin: 5px;*/
       }
       .card:hover{
