--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@
       .card {
         width: 120px;
         height: 150px;
-        background-image: url("cardBack.jpg");
         background-size: 110px 140px;
         border-radius: 10px;
         border: 2px grey solid;
         padding: 60px 40px 40px 45px;
+        color: white;
         /*margin: 5px;*/
       }
       .card:hover{
